# adri

./: .actrc  .adri-markers.yaml  .dockerignore  .flake8  .gitignore  .gitmodules  .pr_description.md  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .safety-project.ini  404.html  ADRI_AI_ENGINEER_REVIEW.md  ADRI_VALIDATOR_PRODUCTION_READY_SUMMARY.md  ARCHITECTURE.md  ASSESSOR_FINAL_COVERAGE_REPORT.md  BETA_RELEASE_NOTES.md  BRANCHING_AND_RELEASE_STRATEGY.md  BRANCH_PROTECTION_NEXT_STEPS.md  BRANCH_PROTECTION_SETUP_COMPLETE.md  BRANCH_PROTECTION_SETUP_GUIDE.md  BRANCH_PROTECTION_SUCCESS.md  BRANCH_PROTECTION_TEST.md  BUNDLED_STANDARDS_IMPLEMENTATION.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CI_CD_ENHANCEMENTS.md  CI_RESOLUTION_GUIDE.md  CI_TEST_SUITE_HEALTH_FIX.md  CLEANUP_SUMMARY.md  CLI_COMMANDS_COVERAGE_COMPLETE.md  CLI_COMMANDS_FINAL_COVERAGE_REPORT.md  CODE_OF_CONDUCT.md  COMPONENT_MANIFEST.json  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_FINAL_STATUS.md  DEPLOYMENT_STATUS_3.1.0.md  DEPLOYMENT_SUMMARY.md  DEVELOPER.md  DEVELOPMENT.md  (+123 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml  site_config.yml
.internal/: README_FUNCTIONALITY_REVIEW.md
.pre-commit-hooks/: check-utf8-encoding.py
ADRI/: config.yaml  test_invoice_data.csv
API_REFERENCE/: index.html
ARCHITECTURE_DECISIONS/: index.html
ASSESSMENT_MODES/: index.html
CLAIMS_TRACKER/: index.html
CLI/: index.html
CONTRIBUTING/: index.html
CONTRIBUTING_TEMPLATES/: index.html
CUSTOM_RULES_GUIDE/: index.html
DEVELOPER/: index.html
DISCOVERY_AND_VALIDATION/: index.html
DOCUMENTATION_ALIGNMENT/: index.html
DOCUMENT_PURPOSE_ANALYSIS/: index.html
ENHANCING_DATA_SOURCES/: index.html
EXTENDING/: index.html
FAQ/: index.html
GET_STARTED/: index.html
GITHUB_PAGES/: index.html
GOVERNANCE_SETUP_CHECKLIST/: index.html
IMPLEMENTING_GUARDS/: index.html
INTEGRATIONS/: index.html
Methodology/: index.html
PROGRESSIVE_ENGAGEMENT_STRATEGY/: index.html
PROJECT_STRUCTURE/: index.html
PROVENANCE_SPECIFICATION/: index.html
QUICKSTART/: index.html
ROADMAP/: index.html
ROADMAP_V1.1/: index.html
RULE_TESTING_ARCHITECTURE/: index.html
STYLE_GUIDE/: index.html
TEMPLATE_GUARD/: index.html
TEMPLATE_TDD_GUIDE/: index.html
TESTING/: index.html
UNDERSTANDING_DIMENSIONS/: index.html
UNDERSTANDING_TEMPLATES/: index.html
USE_CASE_AI_STATUS_AUDITOR/: index.html
USE_CASE_INVOICE_PAYMENT_AGENT/: index.html
VISION/: index.html
VISION_IN_ACTION/: index.html
adri/: __init__.py  assessment_modes.py  assessor.py  cli.py  interactive.py  report.py  version.py
adri.egg-info/: PKG-INFO  SOURCES.txt
ai-builders/: index.html
ai_dev_manager/: PROJECT_RESTRUCTURING.md
architecture/: index.html
completeness_dimension/: index.html
components/: index.html
config/: mkdocs.yml  site_config.yml
consistency_rules/: index.html
data/: benchmark.json
data-providers/: index.html
datasets/: index.html
development/: README.md
diagrams/: adri_system_overview.mmd  day_in_life_timeline.mmd  discovery_flow.mmd  index.html  usb_analogy.mmd
docs/: ADRI_V2_RATIONALE_AND_BENEFITS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ASSESSMENT_LOG_EXPLANATION.md  ASSESSMENT_MODES.md  CLAIMS_TRACKER.md  CLI.md  CLI_REFERENCE.md  CONTRACTS_AUTO_TESTING.md  CONTRACT_VALIDATION_WORKFLOW.md  CONTRIBUTING.md  CONTRIBUTING_TEMPLATES.md  CompletenessDimension.md  DATA_CONTRACTS.md  DEPLOYMENT_GUIDE.md  DEVELOPER.md  DOCUMENT_PURPOSE_ANALYSIS.md  ENHANCING_DATA_SOURCES.md  EVENT_DRIVEN_LOGGING.md  EXTENDING.md  FAQ.md  FreshnessDimension.md  GETTING_STARTED.md  GET_STARTED.md  GITHUB_PAGES.md  GOVERNANCE_SETUP_CHECKLIST.md  GUIDE_WALKTHROUGH.md  Gemfile  IMPLEMENTING_GUARDS.md  INTEGRATIONS.md  Implementation-Guide.md  MIGRATION_EVENT_DRIVEN_LOGGING.md  Methodology.md  OPEN_SOURCE_FEATURES.md  PERFORMANCE_TESTING.md  PROGRESSIVE_ENGAGEMENT_STRATEGY.md  PROJECT_STRUCTURE.md  PROVENANCE_SPECIFICATION.md  PYPI_FIRST_VERSION_MANAGEMENT.md  (+59 more)
examples/: 01_basic_assessment.py  02_requirements_as_code.py  03_data_team_contract.py  04_multi_source.py  05_production_guard.py  06_metadata_generation.py  07_status_auditor_demo.py  08_template_compliance.py  09_agent_view_pattern.py  ADRI  README.md  adri_protected_decorator_example.py  autogen-research-collaboration.py  autogen_basic.py  comprehensive_assessment.py  consistency_assessment.py  crewai-business-analysis.py  crewai_basic.py  generic_basic.py  haystack-knowledge-management.py  haystack_basic.py  index.html  langchain-customer-service.py  langchain_basic.py  langgraph-workflow-automation.py  langgraph_basic.py  llamaindex-document-processing.py  llamaindex_basic.py  plausibility_assessment.py  semantic-kernel-ai-orchestration.py  semantic_kernel_basic.py  template_assessment_example.py  test_init_data.completeness.json  test_init_data.csv  usage.md
frequently-asked-questions/: index.html
freshness_dimension/: index.html
getting-started/: index.html
implementation_guide/: index.html
notebooks/: 01_adri_guard_tutorial.ipynb  02_langchain_integration_tutorial.ipynb
plausibility_dimension/: index.html
plausibility_rules/: index.html
quickstart/: README.md  quickstart.py  see_it.py  try_it.py
scripts/: README.md  check_code_quality.py  cli.py  compare_benchmarks.py  comprehensive-act-test.sh  configure_github_settings.py  download_previous_benchmark.py  extract_opensource.py  generate_standard_test_data.py  local-ci-test.sh  migrate_datasets.py  migrate_standards_to_severity.py  preflight_open_source.py  prepare_release.py  prepare_releases.py  publish_pypi.sh  pypi_manager.py  rollback_release.py  run_financial_market_assessment.py  run_tests_compact.py  run_tests_context_efficient.py  run_tests_summary.py  setup-dev-environment.sh  tag_code_examples.py  template_tdd_runner.py  test-local.sh  test_local.py  test_package.py  test_rollback_release.py  update_benchmark.py  update_catalog.py  update_release_registry.py  update_version_tracking.py  validate_all_standards.py  validate_documentation.py  (+3 more)
(+1247 files in other folders)
