[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adri"
dynamic = ["version"]
description = "AI Data Reliability Intelligence - Comprehensive data quality assessment and validation framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Thomas Russell", email = "adri@verodat.com"}
]
maintainers = [
    {name = "Thomas Russell", email = "adri@verodat.com"}
]
keywords = ["data-quality", "ai", "validation", "assessment", "reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "pyarrow>=14.0.0",  # For parquet support
    "tabulate>=0.9.0",  # For benchmark comparison output
    "requests>=2.28.0",  # For HTTP requests in verodat_logger
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-timeout>=2.1.0",  # For test timeout support
    "pre-commit>=3.0.0",  # For pre-commit hooks
    "black==25.1.0",
    "isort==5.12.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=2.17",
    "bandit[toml]>=1.7",
    "safety>=2.3",
    "pip-audit>=2.6",
    "types-requests>=2.28.0",  # Type stubs for requests library
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-timeout>=2.1.0",  # For test timeout support
    "pyarrow>=14.0.0",  # For parquet support in tests
    "tabulate>=0.9.0",  # For benchmark comparison script
]
security = [
    "bandit[toml]>=1.7",
    "safety>=2.3",
    "pip-audit>=2.6",
]

[project.urls]
Homepage = "https://github.com/adri-standard/adri"
Documentation = "https://github.com/adri-standard/adri/blob/main/README.md"
Repository = "https://github.com/adri-standard/adri"
Issues = "https://github.com/adri-standard/adri/issues"
Changelog = "https://github.com/adri-standard/adri/blob/main/CHANGELOG.md"

[project.scripts]
adri = "adri.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["adri*"]
exclude = [
    "development*",
    "*_example.py",
    "basic_example.py",
    "test_standalone*",
    "tests*",
    "examples*",
    "docs*",
    "tools*",
    "htmlcov*",
    "logs*",
    "*_test_env*"
]

[tool.setuptools.package-data]
adri = [
    "*.yaml",
    "*.yml",
    "templates/*.yaml",
    "standards/*.yaml",
    "standards/*.yml"
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["adri"]
known_third_party = ["pandas", "yaml", "click", "pytest"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yaml.*",
    "setuptools.*",
]
ignore_missing_imports = true

# pylint configuration
[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "duplicate-code",
    "fixme",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60

# bandit configuration
[tool.bandit]
exclude_dirs = ["development"]
skips = ["B101", "B601", "B110"]  # Skip assert_used, shell_injection_process_args, and try_except_pass

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=adri",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-fail-under=50",  # Temporary reduction for release
    "--tb=short",  # Shorter traceback format for CI readability
    "--maxfail=3",  # Stop after 3 failures to prevent long CI runs
    "-q",  # Quiet output to prevent token explosion in CI
]
testpaths = ["tests"]
console_output_style = "progress"  # Progress style output for better CI readability
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quick: marks tests as quick/fast (deselect with '-m \"not quick\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "performance: marks tests with large datasets (deselect with '-m \"not performance\"')",
    "stress: marks tests with extreme conditions (deselect with '-m \"not stress\"')",
    "timeout: marks tests with custom timeout values",
    "ci_skip: marks tests to skip in CI environment",
    "ci_only: marks tests that should only run in CI environments",
    "audit: marks tests for audit logging functionality",
    "csv_output: marks tests for CSV output functionality",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*pkg_resources.*:DeprecationWarning",  # Common in CI environments
]
# Timeout settings for CI (in seconds)
timeout = 30  # Default timeout for all tests
timeout_method = "thread"  # Use thread-based timeout

# coverage configuration
[tool.coverage.run]
source = ["src/adri"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
    "*/setup.py",
    "examples/*",           # EXCLUDE examples from coverage
    "development/*",        # EXCLUDE development tools
    "tools/*",             # EXCLUDE utility tools
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# setuptools_scm configuration
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/adri/_version.py"
fallback_version = "4.0.0"
